--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
   grid-area: header;
   text-align: center;
   font-size: 2rem;
-  padding: 1rem;
+  padding-top: 1.5rem;
   line-height: 1;
 }
 
